# deckgl-point

./: .gitignore  App.css  Legend.tsx  Makefile  README.md  app.tsx  common.ts  edito-staticpages-contribution.sh  generate_data.py  index.html  package-lock.json  package.json  pyproject.toml  reducer.tsx  requirements.txt  s3.ts
Components/: CircularProgress.tsx  Legend.tsx
points-of-interest/: AlgalBloomFormation.ts  EcosystemBasedFisheriesManagementOfBristolBayRedKingCrab.ts  OctopusVulgarisInNorthernSpain.ts  ShiftsInAmericanLobsterPopulations.tsx  common.ts
