[tool.poetry]
name = "geoarrow-example-point"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.5"
lonboard = "^0.3.0"
numpy = "^1.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
